--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <body>
     <header>
       <a href="./index.html">Britlex</a>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Contacts</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#about_us">About Us</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contact_us">Contacts</a></li>
+        </ul>
+      </nav>
+
       <button type="button">Let’s Talk</button>
     </header>
     <main>
@@ -30,9 +33,124 @@
           src="./img/learning-languages.jpg"
           alt="Girl wearing headphones"
           title="girl wearing headphones"
-          width="500"
+          width="654"
         />
       </section>
+      <section>
+        <h2 id="skills">Skills</h2>
+        <ul>
+          <li>
+            <img src="./img/speaking.jpg" alt="Speaking" width="390" />
+            <h3>Speaking</h3>
+            <p>
+              Improve your English skills and confidence. Live classes and interactive lessons
+              online. 20% extra free for a limited time only
+            </p>
+            <p>
+              Learn English online and improve your skills through our high-quality courses and
+              resources – all designed for adult language learners.
+            </p>
+            <a href="#">Learn more</a>
+          </li>
+          <li>
+            <img src="./img/writing.jpg" alt="Writing" width="390" />
+            <h3>Writing</h3>
+            <p>
+              One of the most important and extensive areas of natural science, the science that
+              studies substances, also their composition
+            </p>
+            <a href="#">Learn more</a>
+          </li>
+          <li>
+            <img src="./img/reading.jpg" alt="Reading" width="390" />
+            <h3>Reading</h3>
+            <p>
+              Perception and response actions of the user resulting from the use and/or upcoming use
+              of the product, system or service
+            </p>
+            <a href="#">Learn more</a>
+          </li>
+          <li>
+            <img src="./img/listening.jpg" alt="Listening" width="410" />
+            <h3>Listening</h3>
+            <p>
+              Here you can find activities to practise your listening skills. Listening will help
+              you to improve your understanding
+            </p>
+            <a href="#">Learn more</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 id="about_us">About Us</h2>
+        <p>
+          The model offers a framework for discussing problems related to the user's experience, as
+          well as possible ways and means of solving them. Application development begins at the top
+          level (strategy), where the future software product is described quite abstractly from the
+          point of view of the expectations of both users and the customer.
+        </p>
+        <ul>
+          <li>
+            <p>800</p>
+            <p>Pupils</p>
+          </li>
+          <li>
+            <p>18</p>
+            <p>Teachers</p>
+          </li>
+          <li>
+            <p>6</p>
+            <p>Foreign languages</p>
+          </li>
+        </ul>
+        <img src="./img/business-competition-bro-1.jpg" alt="Man with flag" width="540" />
+      </section>
+      <section>
+        <h2 id="pricing">Pricing</h2>
+        <ul>
+          <li>
+            <img src="./img/online-1.jpg" alt="online lesson" width="425" />
+            <h3>Self-study online course</h3>
+            <p>
+              Start learning English online in live classes with qualified EC teachers and students
+              from all over the world.
+            </p>
+            <p>&#163;5.99</p>
+            <p>per month</p>
+          </li>
+          <li>
+            <img src="./img/lesson(1).jpg" alt="lesson at room" width="425" />
+            <h3>Live online classes</h3>
+            <p>Interactive group classes with expert teachers. Free 7-day trial</p>
+            <p>&#163;12.99</p>
+            <p>per month</p>
+          </li>
+          <li>
+            <img src="./img/webinar-3.jpg" alt="personal webinar" width="425" />
+            <h3>Personal Tuition</h3>
+            <p>Online one-to-one English tutoring – enjoy our first session for only $1</p>
+            <p>&#163;12.99</p>
+            <p>per month</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 id="contact_us">Contact Us</h2>
+        <img src="./img/contact(1).jpg" alt="running man" width="425" />
+        <p>
+          Discover your current English level by taking our free online English test. Sign up to our
+          newsletter for learning tips and free resources
+        </p>
+        <button type="button">Subscribe</button>
+      </section>
     </main>
+    <footer>
+      <p>Britlex</p>
+      <ul>
+        <li><a href="#">Terms and Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Cookie Policy</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
